_sass/_blog_styling.scss
/* blog */

.blog-index {
  background-color: $blush;
  background-image: url("../images/background_letters_blush.png");
  background-image: repeat;
  padding-top: 6rem;
  padding-bottom: 6rem;
  h1 {
  text-align: center;
  font-weight: 700;
  }
}

.post-meta {
  font-family: $base-font-family;
  font-weight: 700;
}

.blog-subhead {
  font-family: $header-font-family;
  font-size: $font-size-3;
  font-weight: 700;
  color: $text-color;
  text-transform: uppercase;
  letter-spacing: 1.51px;
  text-align: center;
  padding-top: 1rem;
  padding-bottom: 1rem;
}

.blog-cta {
  text-align: center;
  padding-top: 0rem;
  padding-bottom: 1rem;
}

#newsletter-email {
  margin: .6rem;
  padding: .6rem;
  height: 1rem;
  width: 80%;
  max-width: 18rem;
  font-size: $font-size-1;
  font-family: $base-font-family;
  @include media-query($desktop) {

  }
}

#newsletter-subscribe {
  margin-top: .6rem;
  margin-bottom: 3rem;
  padding: .6rem;
  border: none;
  background-color: $link;
  color: $background-color-1;
  width: 80%;
  max-width: 12rem;
  font-size: $font-size-1;
  font-family: $base-font-family;
  @include media-query($desktop) {

  }
}




/* blog posts */

.blog-post {
  margin-right: auto;
  margin-left: auto;
  padding-top: 6rem;
  max-width: $article-width;
  background-color: $background-color-1;
  .blog-post-content {
  h2 {
  color: $text-color;
  font-size: $font-size-3;
  font-weight: 300;
  letter-spacing: 1px;
  }
  }
  img {

  }
}

.post {
  background-color: $background-color-1;
}

.caption {
  font-size: $caption;
  font-family: $base-font-family;
  font-weight: 300;
  font-style: italic;
  color: $text-color;
  line-height: $base-line-height;
  margin-top: -.6rem;
  padding-bottom: 1rem;
}

.post-cta {
  text-align: center;
  width: 80%;
  max-width: $article-width;
  margin-right: auto;
  margin-left: auto;
  h2 {
  font-weight: 300;
  font-size: $font-size-2;
  letter-spacing: 1px;
  color: $text-color;
  line-height: 1.4rem;
  }
}

